2002-01-18  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* fn-financial.c : change arguments to coupdaybs, coupdaysnc, 
	  coupdays and coupnum
	(coupnum) : simplify
	(couppcd, coupncd) : ignore XL
	(func_coup_cd) change to func_coup wrapping more functions
	(gnumeric_coupdaybs) : change into wrapper around func_coup_cd
	(gnumeric_coupdays) : ditto
	(gnumeric_coupdaysnc) : ditto
	(gnumeric_coupncd) : ditto
	(gnumeric_couppcd) : ditto
	(gnumeric_coupnum) : ditto
	(finance_functions_init) : add another optional argument to 
	  gnumeric_coupnum

2002-01-17  Abel Cheung  <maddog@linux.org.hk>

	* fn-database.c, fn-date.c, fn-eng.c, fn-information.c, fn-math.c,
	  fn-stat.c: Various typo and minor fixes in function descriptions.

2002-01-16  Jon K Hellan  <hellan@acm.org>

	* fn-sheet.c (gnumeric_version): Return string as documented, not
	float.

2002-01-16  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* fn-financial.c : change oem to eom, don't release null maturity
	  or settlement. Implement `xl' selector
	(coupdaybs) : fix documentation
	(coupncd) : fix documentation
	(couppcd) : fix documentation
	(coupdayscd) : fix documentation
	(coupdays) :  fix documentation
	
2002-01-15  Jody Goldberg <jody@gnome.org>

	* Release 1.0.2

2002-01-15  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* fn-financial.c : Change parameters in calls to coupdaysnc,
	coupdaybs and coupdays.
	(func_coup_cd) : extract common code from 
	  gnumeric_coupncd and gnumeric_couppcd (proposed by Neil Booth)
	(gnumeric_coupncd) : change into wrapper for func_coup_cd
	(gnumeric_couppcd) : change into wrapper for func_coup_cd

2002-01-14  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* fn-financial.c (coupdays) : rewrite  and move to datetime.c
	(coupdaybs) : rewrite and move to datetime.c
	(days_between_dep_basis) : fix small error and move to datetime.c
	(adjust_dates_basis) : move to datetime.c
	(coupncd) : move to datetime.c
	(couppcd) : move to datetime.c